scatterplot for horsepower and weight

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 	<li>
 	<a href="src.zip">Download sourcecode</a>
 	</li>
+	<li>
+		<a href="horsepower_weight_scatterplot.html">scatter plot: horsepower and weight</a>
+	</li>
 	</ul>
 </body>
 
