heatmap for correlation matrix

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 	<li>
 		<a href="horsepower_weight_scatterplot.html">scatter plot: horsepower and weight</a>
 	</li>
+	<li>
+		<a href="heatmap_correlation_matrix.html">heatmap plot</a>
+	</li>
 	</ul>
 </body>
 
