Add parallel coordinates

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 	<li>
 		<a href="heatmap_correlation_matrix.html">heatmap plot</a>
 	</li>
-	</ul>
+    <li>
+        <a href="pcp.html">Parallel Coordinates Plot</a>
+    </li>
+
+    </ul>
 </body>
 
 </html>
