--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <li>
         <a href="pcp.html">Parallel Coordinates Plot</a>
     </li>
+    <li>
+        <a href="bar.html">MPG/Origin Bar Chart</a>
+    </li>
 
     </ul>
 </body>
