--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="dashboard-container">
         <div class="chart-container" id="scatter-cont">
             <h2 class="chart-title">Horsepower vs Weight</h2>
-            <svg id="scatterplot" width="700" height="500"></svg>
+			<svg id="scatterplot" style="width: 100%; height: auto;" viewBox="0 0 700 500" preserveAspectRatio="xMidYMid meet"></svg>
 
             <div class="tooltip" id="scatter-tooltip"></div>
         </div>
