fix the pcp visualization

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <div class="chart-container" id="pcp-cont">
             <h2 class="chart-title">Parallel Coordinates</h2>
-            <svg id="pcp-chart" width="1000" height="1000"></svg>
+            <svg id="pcp-chart" width="0" height="0" viewbox="0 0 700 500" preserveAspectRatio="xMidYMid meet"></svg>
         </div>
 
     </div>
